<resources>
    <string name="app_name">Book World</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Explorer Riyadh</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home">Home</string>
    <string name="add_item">Add a Book</string>
    <string name="list_items">Books</string>
    <string name="my_orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Sign Out</string>
    <string name="waiting">waiting</string>
    <string name="delete_success">Book deleted successfully</string>
    <string name="couldnt_delete">Couldn\'t delete the book</string>


    <string name="seller_name">Seller Name:</string>
    <string name="seller_phone">Seller Phone:</string>
    <string name="seller_email">Seller Email:</string>
    <string name="seller_address">Seller Address:</string>

    <string name="buyer_address">Customer Address:</string>
    <string name="buyer_name">Customer Name:</string>
    <string name="buyer_phone">Customer Phone:</string>
    <string name="buyer_email">Customer Email:</string>

    <string name="order_date">Order Date:</string>
    <string name="order_status">Order Status:</string>
    <string name="dispute_date">Dispute Date:</string>
    <string name="dispute_status">Dispute Status:</string>
    <string name="my_disputes">Disputes</string>
    <string name="my_cart">My Cart</string>
    <string name="item_removed_success">Item removed successfully from cart</string>
    <string name="item_fav_removed_success">Item removed successfully from favorite list</string>
    <string name="couldnt_remove_item">Couldn\'t remove item from cart</string>
    <string name="couldnt_remove_fav_item">Couldn\'t remove item from favorite list</string>
    <string name="error">Error</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="order_submitted_success">Order Submitted Successfully</string>
    <string name="success">Success</string>
    <string name="couldnt_submit_order">Couldn\'t submit order</string>
    <string name="confirm_your_order">Please confirm your order</string>
    <string name="book_added_to_cart_success">Book added to cart successfully</string>
    <string name="book_not_to_cart_success">Couldn\'t add this book to the cart</string>
    <string name="not_solved_yet">Not solved yet</string>
    <string name="opened">opened</string>
    <string name="pass_instructions">Password must be at least 1 special character, no white spaces and at least 6 characters</string>
    <string name="email_instructions">example: email@company.com</string>
    <string name="passowrd">Passowrd</string>
    <string name="email">Email</string>
    <string name="nick_name">Nick Name</string>
    <string name="address">Address</string>
    <string name="closed">closed</string>
    <string name="chat_with">Chat with</string>
    <string name="chat_with_seller">Chat with the seller</string>
    <string name="chat_with_buyer">Chat with buyer</string>
    <string name="chat_with_admin">Chat with Admin</string>
    <string name="city">City:</string>
    <string name="zone">Zone</string>
    <string name="currency">&#160;&#160;S.R </string>
    <string name="send">Send</string>
    <string name="rating">Rating</string>
    <string name="your_comment">Your Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="order_now">Order Now</string>
    <string name="account_disabled">Your account is disabled</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="messages">Messages</string>
    <string name="info">Info</string>
    <string name="add_to_fav">Add to Favorite</string>
    <string name="book_added_to_fav_success">Book added to my favorite list</string>
    <string name="book_already_in_list">Book already added in favorite list</string>
    <string name="book_add_fav_failed">Couldn\'t add this book to favorite list</string>
    <string name="faveList">Favorite List</string>
    <string name="review_delete_sucess">Your review deleted successfully</string>
    <string name="review_delete_falied">Couldn\'t delete your review</string>
    <string name="my_intersts">My Interests</string>
    <string name="my_interesting_categories">My Interesting Categories</string>
    <string name="change_lang">Change Language</string>
    <string name="list_of_books">List of Books</string>
    <string name="books_in">"Books in [ "</string>
    <string name="search_for">Search For [</string>
    <string name="no_books_found">No books found in [</string>
    <string name="price">Price:</string>
    <string name="book_type">Book Type:</string>
    <string name="view_details">View Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view_copies">View Copies</string>
    <string name="admin_decision">Admin Decision</string>
    <string name="sing_up">Sing Up</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="no_copies">No. Copies</string>
    <string name="no_pages">No. Pages</string>
    <string name="review_date">Review Date</string>
    <string name="total">Total:</string>
    <string name="delivery_option">Delivery Option:</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="your_address">Your address</string>
    <string name="image">Image</string>
    <string name="b_name">B. Name</string>
    <string name="total_price">Total Price</string>
    <string name="open_dispute">Open Dispute</string>
    <string name="your_dispute">Your Dispute</string>
    <string name="evidence_image">Evidence Image</string>
    <string name="add_picture">Add Picture</string>
    <string name="save">Save</string>
    <string name="update_my_interests">Update My Interests</string>
    <string name="recommended_books">Recommended Books</string>
    <string name="comments">Comments</string>
    <string name="number_of_pages">Number Of Pages:</string>
    <string name="number_of_copies">Number Of Copies:</string>
    <string name="summary">Summary</string>
    <string name="publisher_name">Publisher Name:</string>
    <string name="author_name">Author Name:</string>
    <string name="book_name">Book Name:</string>
    <string name="add_new_book">Add New Book</string>
    <string name="set_qty">Set Qty:</string>
    <string name="category">Category:</string>
    <string name="add_new_copy_of_book">Add New Copy of Book</string>
    <string name="remove_cart_question">Are you sure to remove this item from cart?</string>
    <string name="list_of_my_orders">List of My Orders</string>
    <string name="order_details">Order Details</string>
    <string name="comment_required">You must write your comment</string>
    <string name="insert_book_data">Please insert book data</string>
    <string name="description_required">You have to write some description</string>
    <string name="image_required">Please select an image</string>
    <string name="dispute_sucess_saved">Your dispute have been saved successfully</string>
    <string name="dispute_note_saved">Error, Dispute not saved</string>
    <string name="update_intersts_q">Interest will be updated, are you sure?</string>
    <string name="list_of_my_disputes">List of My Disputes</string>
    <string name="list_added_books">List of Added Books</string>
    <string name="confirm_book_delete">Are you sure to delete [</string>
    <string name="view_order_details">View Order Details</string>
    <string name="out_for_delivery">Out for delivery</string>
    <string name="delivered">Delivered</string>
    <string name="list_rec_orders">List of Orders</string>
    <string name="upadte_profile">Update Profile</string>
    <string name="update_failes">Update Failed</string>
    <string name="check_your_inputes">Check your inputs</string>
    <string name="profile_update_success">Your profile is updated successfully</string>
    <string name="update_profile_failed">Couldn\'t update your profile</string>
    <string name="pass_is_week">Password is too weak</string>
    <string name="pass_required">Password is required</string>
    <string name="write_valid_email">write a valid email</string>
    <string name="email_required">Email is required</string>
    <string name="nickname_required">Nick name is required</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="price_from">Price from:</string>
    <string name="filter_by">Filter By:</string>
    <string name="new_used">New/Used</string>
</resources>