<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_color"
    android:weightSum="1"
    tools:context=".seller.addBookActivity">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <TextView
                            android:id="@+id/interface_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/add_new_book"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/form"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="30dp"
                            android:orientation="vertical">

                                <!--  Book Label -->
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/book_name"
                                    android:textStyle="bold"/>
                                <EditText
                                    android:id="@+id/txtBookName"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="10dp"
                                    android:hint="@string/book_name" />

                                <!-- Author Book Label -->

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/author_name"
                                    android:textStyle="bold"/>
                                <EditText
                                    android:id="@+id/authorName"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="10dp"
                                    android:hint="@string/author_name" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/publisher_name"
                                    android:textStyle="bold"/>
                                <EditText
                                    android:id="@+id/publisherName"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="10dp"
                                    android:hint="@string/publisher_name" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="10dp"
                                    android:orientation="vertical">


                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="@string/book_type" />

                                        <Spinner
                                            android:id="@+id/bookTypeSpinner"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1"
                                            android:entries="@array/bookType"></Spinner>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="10dp"
                                    android:orientation="vertical">


                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="@string/category" />

                                        <Spinner
                                            android:id="@+id/categorySpinner"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:layout_weight="1" ></Spinner>
                                </LinearLayout>

                                <!--  More Details Label -->
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/summary"
                                    android:textStyle="bold"/>
                                <EditText
                                    android:id="@+id/summary"
                                    android:layout_width="match_parent"
                                    android:layout_height="120dp"
                                    android:layout_marginBottom="10dp"
                                    android:layout_weight="1"
                                    android:ems="10"
                                    android:hint="@string/summary"
                                    android:inputType="textMultiLine" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/image"
                                    android:textAppearance="?android:attr/textAppearanceMedium" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/textView"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="1"
                                            android:text="@string/add_picture" />

                                        <ImageView
                                            android:id="@+id/imageView2"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="right"
                                            android:layout_weight="1"
                                            android:src="@android:drawable/ic_input_add" />
                                </LinearLayout>


                                <Button
                                    android:id="@+id/btn_save"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="24dp"
                                    android:layout_marginBottom="24dp"
                                    android:background="@drawable/rounded_button"
                                    android:padding="12dp"
                                    android:text="@string/save"
                                    android:textAlignment="center"
                                    android:textColor="#fff"
                                    android:textSize="12sp" />
                        </LinearLayout>

                </LinearLayout>

        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>